# arkworks-substrate

./: Cargo.toml  README.md  dependency-diagram.dot  diagram-dependencies.dot
.github/workflows/: benchmark.yml  check.yml
bls12_377/: Cargo.toml
bls12_377/src/: lib.rs
bls12_377/src/curves/: g1.rs  g2.rs  mod.rs  tests.rs
bls12_381/: Cargo.toml
bls12_381/src/: lib.rs
bls12_381/src/curves/: Cargo.toml  g1.rs  g2.rs  mod.rs
bls12_381/src/curves/tests/: mod.rs
bls12_381/src/tests/: mod.rs
bw6_761/: Cargo.toml
bw6_761/src/: lib.rs  tests.rs
bw6_761/src/curves/: g1.rs  g2.rs  mod.rs  tests.rs
ed_on_bls12_377/: Cargo.toml
ed_on_bls12_377/src/: lib.rs  tests.rs
ed_on_bls12_377/src/curves/: Cargo.toml  mod.rs  tests.rs
ed_on_bls12_381_bandersnatch/: Cargo.toml
ed_on_bls12_381_bandersnatch/src/: lib.rs  tests.rs
ed_on_bls12_381_bandersnatch/src/curves/: Cargo.toml  mod.rs  tests.rs
