[package]
name = "sp-bls12-377"
description = "The BLS12-377 pairing-friendly elliptic curve, optimized for Substrate"
version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
include.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
sp-ark-bls12-377.workspace = true
ark-std.workspace = true
sp-crypto-ec-utils.workspace = true

[dev-dependencies]
ark-ff.workspace = true 
ark-ec.workspace = true 
ark-serialize.workspace = true 
ark-algebra-test-templates.workspace = true 

[features]
default = [ "std" ]
std = [
  "ark-algebra-test-templates/std",
  "ark-ec/std",
  "ark-ff/std",
  "ark-serialize/std",
  "ark-std/std",
  "sp-ark-bls12-377/std",
  "sp-crypto-ec-utils/std",
]
