[package]
name = "sp-ark-bls12-377"
description = "The BLS12-377 pairing-friendly elliptic curve, optimized for Substrate"
version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
include.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
ark-bls12-377-ext.workspace = true
ark-std.workspace = true
sp-crypto-ec-utils.workspace = true
ark-scale.workspace = true
ark-ec.workspace = true 

[dev-dependencies]
ark-ff.workspace = true 
ark-algebra-test-templates.workspace = true 

[features]
default = [ "std" ]
std = [
  "ark-algebra-test-templates/std",
  "ark-bls12-377-ext/std",
  "ark-ec/std",
  "ark-ff/std",
  "ark-scale/std",
  "ark-std/std",
  "sp-crypto-ec-utils/std",
]
