[package]
name = "sp-bls12-381"
version = "0.4.1-alpha"
authors = ["Parity Technologies <admin@parity.io>", "Achim Schneider <achim@parity.io>", "arkworks contributors" ]
description = "The BLS12-381 pairing-friendly elliptic curve, optimized for Substrate"
repository = "https://github.com/paritytech/substrate-curves"
keywords = ["cryptography", "finite-fields", "elliptic-curves", "substrate" ]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
sp-ark-bls12-381 = { git = "https://github.com/paritytech/ark-substrate", default-features = false, features = ["scale-fast"] }
sp-crypto-ec-utils =  { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-ark-models = { git = "https://github.com/paritytech/ark-substrate",  default-features = false }
ark-std = { version = "0.4.0", default-features = false }

[dev-dependencies] 
ark-algebra-test-templates = { version = "0.4.2", default-features = false }
ark-ff = { version = "0.4.2", default-features = false }
ark-ec = { version = "0.4.2", default-features = false }
ark-serialize = { version = "0.4.2", default-features = false }

[features]
default = [ "std" ]
std = [  
  "sp-ark-bls12-381/std",
  "sp-crypto-ec-utils/std",
  "ark-std/std", 
]
