[package]
name = "sp-ark-bls12-381"
description = "The BLS12-381 pairing-friendly elliptic curve, optimized for Substrate"
version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
include.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
ark-bls12-381-ext.workspace = true
sp-crypto-ec-utils = { workspace = true, features = ["bls12-381"] }

[dev-dependencies] 
ark-std.workspace = true
ark-serialize.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
ark-algebra-test-templates.workspace = true

[features]
default = [ "std" ]
std = [ "ark-bls12-381-ext/std", "sp-crypto-ec-utils/std" ]
