[package]
name = "sp-bw6-761"
description = "The BW6-761 pairing-friendly elliptic curve, optimized for Substrate"
version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
include.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
ark-bw6-761-ext.workspace = true
ark-std.workspace = true
sp-crypto-ec-utils.workspace = true

[dev-dependencies]
ark-ff.workspace = true
ark-ec.workspace = true
ark-serialize.workspace = true
ark-algebra-test-templates.workspace = true

[features]
default = [ "std" ]
std = [ "ark-bw6-761-ext/std", "ark-std/std", "sp-crypto-ec-utils/std" ]
