[package]
name = "sp-ark-bw6-761"
description = "The BW6-761 pairing-friendly elliptic curve, optimized for Substrate"
version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
include.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
ark-bw6-761-ext.workspace = true
ark-std.workspace = true
sp-crypto-ec-utils.workspace = true
ark-scale.workspace = true
ark-ec.workspace = true 

[dev-dependencies]
ark-ff.workspace = true
ark-algebra-test-templates.workspace = true

[features]
default = [ "std" ]
std = [
  "ark-algebra-test-templates/std",
  "ark-bw6-761-ext/std",
  "ark-ec/std",
  "ark-ff/std",
  "ark-std/std",
  "ark-scale/std",
  "sp-crypto-ec-utils/std"
]
