[package]
name = "sp-ed-on-bls12-377"
description = "A Twisted Edwards curve defined over the scalar field of the BLS12-377 curve, optimized for Substrate"
version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
include.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
sp-ark-ed-on-bls12-377.workspace = true 
ark-std.workspace = true 
sp-crypto-ec-utils.workspace = true

[dev-dependencies]
ark-ff.workspace = true 
ark-serialize.workspace = true 
ark-algebra-test-templates.workspace = true 
ark-ec.workspace = true 

[features]
default = [ "std" ]
std = [
  "ark-std/std", 
  "sp-ark-ed-on-bls12-377/std", 
  "sp-crypto-ec-utils/std",
]
