[package]
name = "sp-ed-on-bls12-381-bandersnatch"
description = "Bandersnatch: a curve defined over the scalar field of the BLS12-381 curve"
version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
include.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
sp-ark-ed-on-bls12-381-bandersnatch.workspace = true
ark-std.workspace = true
sp-crypto-ec-utils.workspace = true

[dev-dependencies]
ark-ff.workspace = true
ark-serialize.workspace = true
ark-algebra-test-templates.workspace = true
ark-ec.workspace = true

[features]
default = [ "std" ]
std = [
  "ark-std/std",
  "sp-ark-ed-on-bls12-381-bandersnatch/std",
  "sp-crypto-ec-utils/std",
]
