[package]
name = "sp-ark-ed-on-bls12-381-bandersnatch"
description = "Bandersnatch: a curve defined over the scalar field of the BLS12-381 curve, optimized for Substrate"
version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
include.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
ark-ed-on-bls12-381-bandersnatch-ext.workspace = true
sp-crypto-ec-utils = { workspace = true, features = ["ed-on-bls12-381-bandersnatch"] }

[dev-dependencies]
ark-std.workspace = true
ark-serialize.workspace = true 
ark-ec.workspace = true 
ark-ff.workspace = true
ark-algebra-test-templates.workspace = true

[features]
default = [ "std" ]
std = [ "ark-ed-on-bls12-381-bandersnatch-ext/std", "sp-crypto-ec-utils/std" ]
